##################################################
 Revision history for Log::Log4perl
##################################################

1.48 (not yet released)
   *    (ms) [rt.cpan.org #114822] Split two lines with CVS-sensitive 
             $Log.. variables into two parts.
   *    (ms) Semaphore issue fixed in Synchronized (reported by 
             Siarhei Kuchynski and Martin Köhler):
          https://github.com/mschilli/log4perl/issues/72
   *    (ms) header_text now works with syswrite (reported by Tom Metro):
          https://github.com/mschilli/log4perl/issues/73

1.47 (2016/03/17)
   *    (ms) [rt.cpan.org #102647] Slaven Rezic fixed a test
             case for file permissions
   *    (ms) Fixed synopsis code in Log::Log4perl::Appender::DBI, 
             reported by Chris Collins.
   *    (ms) Added suggestion by Dylan Doxey to test for both MSWin32 and
             cygwin to detect windows-like systems for which tests need
             to be skipped.
   *    (ms) [rt.cpan.org #110915] Fixed "Redundant argument in sprintf" 
             warning caused by DateFormat.pm with %d{Z} placeholders, 
             reported by Alexander Hartmaier.
   *    (ms) [rt.cpan.org #110512] Felix Ostmann fixed a broken error
             message raised when a boolean filter can't be found.
   *    (ms) All hash traversals in Config.pm now done via "sort keys"
             to make sure we can reliably reproduce potential problems.

1.46 (2014/10/31)
   *    (ms) Fixed Gianni's utc time test for machines set to utc time.

1.45 (2014/10/25)
   *    (ms) fgeueke provided a pull request for short-circuiting boolean
             filters: https://github.com/mschilli/log4perl/pull/48
   *    (ms) [rt.cpan.org #94009] Tim Bunce had requested that the 
             PatternLayout's %m specifier allow for fixed indentation,
             variable indentation, and at the same time permit the use
             of the chomp option. Added with tests and docs.